# statistical_test_agent

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LARGE_FILE_SUPPORT.md  README.md  TEST_RESULTS.md  TODO.md  app.py  chainlit.md  pyproject.toml  requirements.txt
.chainlit/: config.toml
.github/workflows/: ci.yml
.planning/todos/done/: 2026-03-04-expand-statistical-agent-architecture-and-capabilities.md
.planning/todos/pending/: 2026-03-04-add-collapsible-right-side-analysis-settings-panel.md
data/: sample_ab_data.csv  sample_ab_data_alt.csv
docs/: TODO-waves-1-6.md  TODO.md  architecture.md  deployment.md  development.md  testing.md
docs/plans/: 2026-03-06-centered-composer-layout-design.md  2026-03-06-centered-composer-layout-implementation.md  2026-03-06-chat-layout-design.md  2026-03-06-chat-layout-implementation.md  2026-03-06-conversation-history-design.md  2026-03-06-conversation-history-implementation.md  2026-03-06-p2-refactor-plan.md  2026-03-06-p3-packaging-docs-ci-plan.md  2026-03-06-processing-loader-design.md  2026-03-06-processing-loader-implementation.md  2026-03-06-sql-query-layer-design.md  2026-03-06-sql-query-layer-implementation.md  2026-03-08-code-simplification-design.md  2026-03-08-code-simplification-implementation.md
public/: custom.css  custom.js
scripts/: generate_large_sample_data.py  generate_sample_data.py  verify_proportions.py
src/: __init__.py  ab_agent.py  agent.py  agent_reporting.py  agent_runtime.py  agent_session.py  agent_tools.py  app.py  auth.py  config.py  data_paths.py  observability.py  output_truncation.py  query_store.py  query_store_gc.py  sql_query_service.py
src/prompts/: __init__.py  system.md
src/statistics/: __init__.py  analyzer.py  analyzer_protocol.py  bayesian.py  chart_builders.py  chart_catalog.py  charts_core.py  charts_dashboard.py  charts_extended.py  covariate_resolver.py  data_manager.py  diagnostics.py  engine_helpers.py  experiment_design.py  label_inference.py  model_families.py  models.py  power_analysis.py  pyspark_analyzer.py  ratio_metric.py  segment_preparer.py  sequential_config.py  statsmodels_engine.py  summary_builder.py  visualizer.py
src/tooling/: __init__.py  analysis.py  common.py  loading.py  visualization.py
tests/: __init__.py  spark_gate.py  test_ab_module.py  test_agent.py  test_agent_runtime.py  test_agent_session.py  test_analyzer_comprehensive.py  test_analyzer_protocol.py  test_app.py  test_auth.py  test_chat_history_persistence.py  test_config.py  test_configurable_seed.py  test_covariate_resolver.py  test_cuped.py  test_data_path_confinement.py  test_duplicate_units.py  test_engine_helpers.py  test_label_inference.py  test_model_families.py  test_models.py  test_observability.py  test_output_truncation.py  test_parity_pandas_spark.py  test_pipeline_e2e.py  test_power_planning_tool.py  test_pr_review_fixes.py  test_project_metadata.py  test_prompt_externalized.py  test_pyspark_analyzer.py  test_pyspark_diagnostics.py  test_pyspark_property_setters.py  test_pyspark_seed.py  test_query_store.py  test_query_store_gc.py  test_query_store_timeout_audit.py  test_ratio_metric.py  test_reporting_diagnostics.py  test_rows_dropped_and_mde.py  test_segment_preparer.py  (+7 more)
tests/eval/: golden_tasks.py  test_live_tools.py  test_prompt_coverage.py
