[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "statistical-test-agent"
version = "0.1.0"
description = "Conversational A/B testing analysis agent with pandas and PySpark backends."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chainlit>=1.0.1,<3.0",
    "langchain>=1.0,<2.0",
    "langchain-openai>=1.0,<2.0",
    "langgraph>=1.0,<2.0",
    "numpy>=1.24.0,<3.0",
    "openai>=1.10.0,<2.0",
    "pandas>=2.0.0,<3.0",
    "plotly>=5.18.0,<7.0",
    "pydantic>=2.0.0,<3.0",
    "python-dotenv>=1.0.1,<2.0",
    "scipy>=1.10.0,<2.0",
    "statsmodels>=0.14.0,<0.16",
    "tabulate>=0.9.0,<0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0",
    "ruff>=0.4.0,<0.10",
    "mypy>=1.8.0,<2.0",
]
spark = [
    "pyspark>=3.5.0,<4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src.prompts" = ["*.md"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = [".venv", "build", "dist", ".planning", "output", "data"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # calls in defaults are common in LangChain Tool factories
    "B017",  # broad pytest.raises(Exception) accepted in legacy tests
]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
warn_unused_ignores = true
ignore_missing_imports = true
follow_imports = "silent"
exclude = ["^build/", "^dist/", "^\\.venv/", "^\\.planning/"]
